--- a/.github/workflows/telegram-report.yml
+++ b/.github/workflows/telegram-report.yml
@@ -36,7 +36,7 @@ jobs:
           fi
 
       - name: Getting RKSU version
-        id: integrate-kernelsu
+        id: integrate-rksu
         run: |
           if [ -d "./KernelSU" ]; then
             rm -rf "./KernelSU"
@@ -51,7 +51,7 @@ jobs:
           echo "RKSU_VERSION=$RKSU_VERSION" >> $GITHUB_ENV
 
       - name: Getting MKSU version
-        id: integrate-kernelsu
+        id: integrate-mksu
         run: |
           if [ -d "./KernelSU" ]; then
             rm -rf "./KernelSU"
