--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,7 @@ jobs:
             ["KernelSU-Next"]="KernelSU-Next/KernelSU-Next@next"
             ["RKSU"]="rsuntk/KernelSU@main"
             ["MKSU"]="backslashxx/KernelSU@magic"
+            ["SukiSU-Ultra"]="ShirkNeko/SukiSU-Ultra@main"
           )
           
           touch new_build.md
