--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -206,6 +206,19 @@ jobs:
           echo "ARCH=$ARCH" >> $GITHUB_OUTPUT
           echo "args=$args" >> $GITHUB_OUTPUT
 
+      - name: "💉 APatch and SukiSU setup"
+        working-directory: ${{ env.KERNEL_NAME }}
+        env:
+          arch: ${{ steps.generate-args.outputs.ARCH }}
+        run: |
+          echo -e 'CONFIG_KALLSYMS_ALL=y' >> arch/${{ env.arch }}/configs/${{ env.DEFCONFIG_NAME }}
+
+          curl -LSs https://github.com/cvnertnc/kernel_xiaomi_mt6785/commit/0a0c51e54d52b91d4e96bbb0415a3ebc0ee5b4fb.patch | patch -p1
+          curl -LSs https://github.com/cvnertnc/kernel_xiaomi_mt6785/commit/999ee323e42030e122c3a2b0ac17ebdab09c7067.patch | patch -p1
+          curl -LSs https://github.com/cvnertnc/kernel_xiaomi_mt6785/commit/b68f3a7f6afc58f87cba841f01593de60261281d.patch | patch -p1
+
+          cat arch/${{ env.arch }}/configs/${{ env.DEFCONFIG_NAME }}
+
       - name: "😋 Integrate KernelSU or KernelSU-Next"
         id: integrate-kernelsu-next
         working-directory: ${{ env.KERNEL_NAME }}
@@ -226,23 +239,9 @@ jobs:
           if [[ "$withRoot" == "rksu" ]]; then
             curl -LSs "https://raw.githubusercontent.com/rsuntk/KernelSU/main/kernel/setup.sh" | bash -s main
           elif [[ "$withRoot" == "mksu" ]]; then
-            git config --global user.email "github-actions[bot]@users.noreply.github.com"
-            git config --global user.name "github-actions[bot]"
             curl -LSs "https://raw.githubusercontent.com/backslashxx/KernelSU/magic/kernel/setup.sh" | bash -s magic
-            git remote add upstream https://github.com/cvnertnc/kernel_xiaomi_mt6785
-            git fetch upstream
-            git cherry-pick 0a0c51e54d52b91d4e96bbb0415a3ebc0ee5b4fb
-            git cherry-pick 999ee323e42030e122c3a2b0ac17ebdab09c7067
-            git cherry-pick b68f3a7f6afc58f87cba841f01593de60261281d
           elif [[ "$withRoot" == "sukisu" ]]; then
-            git config --global user.email "github-actions[bot]@users.noreply.github.com"
-            git config --global user.name "github-actions[bot]"
             curl -LSs "https://raw.githubusercontent.com/ShirkNeko/SukiSU-Ultra/main/kernel/setup.sh" | bash -s nongki
-            git remote add upstream https://github.com/cvnertnc/kernel_xiaomi_mt6785
-            git fetch upstream
-            git cherry-pick 0a0c51e54d52b91d4e96bbb0415a3ebc0ee5b4fb
-            git cherry-pick 999ee323e42030e122c3a2b0ac17ebdab09c7067
-            git cherry-pick b68f3a7f6afc58f87cba841f01593de60261281d
           else
             curl -LSs "https://raw.githubusercontent.com/tiann/KernelSU/main/kernel/setup.sh" | bash -s main
             rm -rf KernelSU
@@ -251,7 +250,7 @@ jobs:
 
           ROOT_VERSION=$(git -C KernelSU describe --abbrev=0 --tags)
 
-          echo -e "\n💡 KernelSU version: $ROOT_VERSION\n"
+          echo -e "\n💡 ROOT version: $ROOT_VERSION\n"
 
           echo -e "ROOT_VERSION=$ROOT_VERSION" >> $GITHUB_OUTPUT
 
@@ -259,8 +258,6 @@ jobs:
           if [[ "$withRoot" == "rksu" ]]; then
             echo -e 'CONFIG_KSU_MANUAL_HOOK=y' >> arch/${{ env.arch }}/configs/${{ env.DEFCONFIG_NAME }}
           elif [[ "$withRoot" == "sukisu" ]]; then
-            echo -e 'CONFIG_KPM=y' >> arch/${{ env.arch }}/configs/${{ env.DEFCONFIG_NAME }}
-            echo -e 'CONFIG_KALLSYMS_ALL=y' >> arch/${{ env.arch }}/configs/${{ env.DEFCONFIG_NAME }}
             echo -e 'CONFIG_KSU_MANUAL_HOOK=y' >> arch/${{ env.arch }}/configs/${{ env.DEFCONFIG_NAME }}
           elif [[ "$withRoot" == "ksun" ]]; then
             echo -e 'CONFIG_KSU_WITH_KPROBES=n' >> arch/${{ env.arch }}/configs/${{ env.DEFCONFIG_NAME }}
@@ -320,7 +317,7 @@ jobs:
             git clone --recursive -j $(nproc) --branch susfs-v1.5.7 https://github.com/rsuntk/KernelSU KernelSU
           elif [[ "$withRoot" == "mksu" ]]; then
             rm -rf KernelSU
-            git clone --recursive -j $(nproc) --branch 12090-sus155 https://github.com/backslashxx/KernelSU KernelSU
+            git clone --recursive -j $(nproc) --branch 12093-sus155 https://github.com/backslashxx/KernelSU KernelSU
           elif [[ "$withRoot" == "sukisu" ]]; then
             patch -d KernelSU -p1 < SUSFS/kernel_patches/SukiSU/10_enable_susfs_for_ksu.patch
           else
@@ -377,15 +374,15 @@ jobs:
           echo "PATH Variable: $PATH"
           make ${{ env.args }}
 
-      - name: "💙 Upload Image.gz"
-        uses: actions/upload-artifact@v4
-        env:
-          arch: ${{ steps.generate-args.outputs.ARCH }}
-        with:
-          name: Image.gz-${{ env.KERNEL_DEVICE }}-${{ steps.integrate-kernelsu-next.outputs.ROOT_VERSION }}-${{ env.KERNEL_NAME }}-${{ env.builddate }}
-          path: ${{ env.OUT_DIR }}/arch/${{ env.arch }}/boot/Image.gz
-          if-no-files-found: ignore
-          retention-days: 90
+      # - name: "💙 Upload Image.gz"
+        # uses: actions/upload-artifact@v4
+        # env:
+          # arch: ${{ steps.generate-args.outputs.ARCH }}
+        # with:
+          # name: Image.gz-${{ env.KERNEL_DEVICE }}-${{ steps.integrate-kernelsu-next.outputs.ROOT_VERSION }}-${{ env.KERNEL_NAME }}-${{ env.builddate }}
+          # path: ${{ env.OUT_DIR }}/arch/${{ env.arch }}/boot/Image.gz
+          # if-no-files-found: ignore
+          # retention-days: 90
 
       - name: "❤️ Pack AnyKernel3.zip"
         if: ${{ env.useAnykernel == 'true' }}
