Build: KPM Detection fixed

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -381,7 +381,7 @@ jobs:
         working-directory: ${{ env.KERNEL_NAME }}
         env:
           arch: ${{ steps.generate-args.outputs.ARCH }}
-        if: ${{ env.withRoot == 'sukisu' || env.withKPM == 'true' }}
+        if: ${{ env.withRoot == 'sukisu' && env.withKPM == 'true' }}
         run: |
           mkdir ~/SukiSUPatch
           cd ~/SukiSUPatch
