--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,8 +19,7 @@ jobs:
           declare -A repos=(
             ["KernelSU-Next"]="KernelSU-Next/KernelSU-Next@next"
             ["RKSU"]="rsuntk/KernelSU@main"
-            ["MKSU"]="backslashxx/KernelSU@magic"
-            ["SukiSU-Ultra"]="ShirkNeko/SukiSU-Ultra@main"
+            ["SukiSU-Ultra"]="SukiSU-Ultra/SukiSU-Ultra@main"
           )
           
           touch new_build.md
