--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -316,7 +316,8 @@ jobs:
             rm -rf KernelSU
             git clone --recursive -j $(nproc) --branch susfs-v1.5.7 https://github.com/rsuntk/KernelSU KernelSU
           elif [[ "$withRoot" == "sukisu" ]]; then
-            patch -d KernelSU -p1 < SUSFS/kernel_patches/KernelSU/10_enable_susfs_for_sukisu.patch
+            rm -rf KernelSU
+            git clone --recursive -j $(nproc) --branch nongki https://github.com/cvnertnc/SukiSU-Ultra KernelSU
           else
             patch -d KernelSU -p1 < SUSFS/kernel_patches/KernelSU/10_enable_susfs_for_ksun.patch
           fi
