Revert "Build: Removed MKSU build. Susfs changes the branch name a lot, I can't change the susfs branch name every time."
This reverts commit f7e411fb6affa1cc63609b953c745c0ae9a562e3.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,8 @@ jobs:
           declare -A repos=(
             ["KernelSU-Next"]="KernelSU-Next/KernelSU-Next@next"
             ["RKSU"]="rsuntk/KernelSU@main"
-            ["SukiSU-Ultra"]="SukiSU-Ultra/SukiSU-Ultra@main"
+            ["MKSU"]="backslashxx/KernelSU@magic"
+            ["SukiSU-Ultra"]="ShirkNeko/SukiSU-Ultra@main"
           )
           
           touch new_build.md
