--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -318,8 +318,7 @@ jobs:
             rm -rf KernelSU
             git clone --recursive -j $(nproc) --branch susfs-v1.5.7 https://github.com/rsuntk/KernelSU KernelSU
           elif [[ "$withRoot" == "mksu" ]]; then
-            rm -rf KernelSU
-            git clone --recursive -j $(nproc) --branch 12095-sus155 https://github.com/backslashxx/KernelSU
+            curl -LSs "https://raw.githubusercontent.com/cvnertnc/KernelSU/susfs/kernel/setup.sh" | bash -s susfs
           elif [[ "$withRoot" == "sukisu" ]]; then
             patch -d KernelSU -p1 < SUSFS/kernel_patches/KernelSU/10_enable_susfs_for_sukisu.patch
           else
